# inotify_ipc

./: README.md  meson.build  template_config.ini
example/: receiver.cpp  sender.cpp
examples/: receiver.cpp  sender.cpp  version.cpp
examples/c/: macro.h  receiver.c  sender.c  version.c
include/: iipc.h  iipc.hpp  ipc.hpp  version.h.in  version.hpp.in
src/: iipc.cpp  ipc.cpp  version.cpp
src/c/: assert_c.hpp  iipc_c.cpp  string_c.cpp
tests/: channel_get_path.test.cpp  channel_send_receive.test.cpp  channel_set_path.test.cpp  get_channel.test.cpp  ipc.test.cpp  version.test.cpp
